k8s/core-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-server
  template:
    metadata:
      labels:
        app: core-server
    spec:
      containers:
        - name: core-server
          image: core/server
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: core-server
spec:
  type: LoadBalancer
  selector:
    app: core-server
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 8081
      targetPort: 8081
