k8s/core-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: core.by
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-server
                port:
                  number: 8080
